# bccnotes

./: README.md  calculo-pi.rst  conf.py  descritiva.rst  ed2.rst  index.rst  labnum.rst  modelagem.rst  paralela.rst  pyproject.toml  requirements.txt  resumop1.md
Calculo Pi/: calcpi-aula01.md
ED 2/: 323-aula01.md  323-aula02.md  323-aula03.md  323-aula04.md
LabNum/: labnum-aula01.md  labnum-aula02.md  labnum-aula03.md  labnum-aula04.md  labnum-aula05.md
Paralela/: aula_02-04.md  aula_03-12.md  aula_03-14.md  aula_03-26.md  aula_03-28.md  aula_04-09.md  aula_04-11.md  aula_04-23.md  aula_04-30.md  aula_05-07.md
TecProg 2/: tecprog-aula01.md
calculo-pi/: README.md  calcpi-aula01.md
ed2/: 323-aula01.md  323-aula02.md  323-aula04.md  323-aula05.md  323-aula06.md  323-aula07.md  323-aula08.md  323-aula09.md  323-aula10.md  323-aula11-12.md
mac219/: aula-26-mar.rst
tecprog2/: Rails.md
